exports[`test brackets.js 1`] = `
"import {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns
} from \'.\';
import {fitsIn, oneLine} from \'.\';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns
} from \".\";
import { fitsIn, oneLine } from \".\";
"
`;

exports[`test brackets.js 2`] = `
"import {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns
} from \'.\';
import {fitsIn, oneLine} from \'.\';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns
} from \".\";
import {fitsIn, oneLine} from \".\";
"
`;

exports[`test long-line.js 1`] = `
"import someCoolUtilWithARatherLongName from \'../../../../utils/someCoolUtilWithARatherLongName\';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import someCoolUtilWithARatherLongName
  from \"../../../../utils/someCoolUtilWithARatherLongName\";
"
`;

exports[`test long-line.js 2`] = `
"import someCoolUtilWithARatherLongName from \'../../../../utils/someCoolUtilWithARatherLongName\';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import someCoolUtilWithARatherLongName
  from \"../../../../utils/someCoolUtilWithARatherLongName\";
"
`;

exports[`test multiple_standalones.js 1`] = `
"import a, * as b from \'a\';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import a, * as b from \"a\";
"
`;

exports[`test multiple_standalones.js 2`] = `
"import a, * as b from \'a\';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import a, * as b from \"a\";
"
`;
